<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.example.exercise_calculator.my_control.MyTextView
            android:id="@+id/myTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textSize="60sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.21" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05109489" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="0" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="1" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="1" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="1" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="2" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="2" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="2" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonJia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jia"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="0" />

            <Button
                android:id="@+id/buttonJian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jian"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="1" />

            <Button
                android:id="@+id/buttonChen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chen"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="2" />

            <Button
                android:id="@+id/buttonChu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chu"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonQingkong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/清空"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonJisuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/转换"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="4" />

            <ImageButton
                android:id="@+id/imageButtonTuige"
                android:layout_width="88dp"
                android:layout_height="58dp"
                app:layout_column="3"
                app:layout_row="4"
                app:srcCompat="@drawable/ic_baseline_backspace_24" />

            <Button
                android:id="@+id/buttonKaifang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/开方"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="4"
                tools:text="@string/开方" />

            <Button
                android:id="@+id/buttonZhuanhuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_zhuanhuan"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="4"
                tools:text="@string/_zhuanhuan" />

        </androidx.gridlayout.widget.GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>